// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bookshelf Refresh Bookshelf createPromiseArray creates amazon and goodreads promise arrays 1`] = `
Array [
  Array [
    "9780988995819",
  ],
  Array [
    "5678",
  ],
]
`;

exports[`Bookshelf Refresh Bookshelf createPromiseArray creates amazon and goodreads promise arrays 2`] = `
Array [
  Array [
    "9780988995819",
  ],
  Array [
    "5678",
  ],
]
`;

exports[`Bookshelf Refresh Bookshelf findAndMergeInUpdates does not update if no book differences 1`] = `Array []`;

exports[`Bookshelf Refresh Bookshelf findAndMergeInUpdates updates books with differences 1`] = `
Array [
  Array [
    "a1",
    Object {
      "amazonAverageRating": 3.5,
      "amazonRatingsCount": 322,
      "goodreadsAverageRating": 2.5,
    },
  ],
  Array [
    "as234123",
    Object {
      "amazonAverageRating": 4.5,
      "amazonRatingsCount": 22,
      "goodreadsAverageRating": 3.5,
      "goodreadsRatingsCount": 220,
    },
  ],
]
`;

exports[`Bookshelf Refresh Bookshelf findAndMergeInUpdates updates books with differences 2`] = `
Array [
  Array [],
  Array [],
  Array [],
]
`;

exports[`Bookshelf renders does not with active false 1`] = `
<Fragment>
  <WithStyles(LinearProgress)
    value={0}
    variant="determinate"
  />
  <div>
    <Connect(WithStyles(GenreSelector)) />
  </div>
</Fragment>
`;

exports[`Bookshelf renders with books on bookshelf 1`] = `
<Fragment>
  <WithStyles(LinearProgress)
    value={0}
    variant="determinate"
  />
  <div>
    <Connect(WithStyles(GenreSelector)) />
  </div>
  <Results
    booklist={Array []}
    handleDelete={[Function]}
    handleSave={[Function]}
  />
</Fragment>
`;

exports[`Bookshelf renders with no books on bookshelf 1`] = `
<Fragment>
  <WithStyles(LinearProgress)
    value={0}
    variant="determinate"
  />
  <div>
    <Connect(WithStyles(GenreSelector)) />
  </div>
  <Results
    booklist={Array []}
    handleDelete={[Function]}
    handleSave={[Function]}
  />
</Fragment>
`;
